User creation and activation tests finished

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,12 @@ exceptions.UserCreateException.email.empty=Email is mandatory
 exceptions.UserCreateException.email.invalid=Email is invalid
 exceptions.UserCreateException.password.empty=Password is mandatory
 exceptions.UserCreateException.password.size=Password must have at least {0} characters
-exceptions.UserActivateException.hash.empty=Hash is mandatory
+
 exception.UserNotFoundException.byId=User with id {0} not found
 exception.UserNotFoundException.byHash=User with hash {0} not found
+
+exceptions.UserActivateException.hash.empty=Hash is mandatory
+exceptions.UserActivateException.status.invalid=User status is invalid
+
+exceptions.UserDeactivationException.id.empty=User id not informed
+exceptions.UserDeactivationException.status.invalid=User cannot be deactivated
