feature: Added Channel Service Layer and tests

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,7 @@ javax.validations.user.name.notBlank=Username is mandatory
 javax.validations.user.name.size=Username size must be between {min} and {max}
 javax.validations.user.email.notBlank=Email is mandatory
 javax.validations.user.email.invalid=Email {0} is invalid
+
 exceptions.UserCreateException.name.empty=Name is mandatory
 exceptions.UserCreateException.name.firstAndLastName=Last name is mandatory
 exceptions.UserCreateException.email.empty=Email is mandatory
@@ -17,3 +18,16 @@ exceptions.UserActivateException.status.invalid=User status is invalid
 
 exceptions.UserDeactivationException.id.empty=User id not informed
 exceptions.UserDeactivationException.status.invalid=User cannot be deactivated
+
+exceptions.ChannelCreateException.id.empty=Id is mandatory
+exceptions.ChannelCreateException.name.empty=Name is mandatory
+exceptions.ChannelCreateException.name.singleWord=Name should not contain spaces
+exceptions.ChannelCreateException.title.empty=Title is mandatory
+exceptions.ChannelCreateException.user.empty=User creation is mandatory
+exceptions.ChannelCreateException.directMessage.empty=Direct message is mandatory
+exceptions.ChannelCreateException.private.empty=Private channel is mandatory
+exceptions.ChannelCreateException.status.empty=Channel status is mandatory
+exceptions.ChannelCreateException.created.empty=Creation date is mandatory
+
+exception.ChannelSubscriptionException.user.alreadySubscribed=User {0} is already subscribed on channel {1}
+exception.ChannelSubscriptionException.private=User {0} cannot subscribe on private channel {1}
